# fluxer-neptunium

./: Cargo.toml  README.md
examples/: Cargo.toml  replying_to_ping.rs  test_rate_limiting.rs  user_bot.rs
fluxer-neptunium/: Cargo.toml
fluxer-neptunium/src/: api.rs  cache.rs  client.rs  client_builder.rs  events.rs  lib.rs  macros.rs
fluxer-neptunium/src/api/: messages.rs
fluxer-neptunium/src/client/: config.rs  error.rs
fluxer-neptunium/src/events/: context.rs  data.rs  listener.rs
fluxer-neptunium/src/exts/: guild.rs  message.rs  user.rs
fluxer-neptunium/src/internal/traits/: guild.rs
gateway/src/: shard.rs
http/: Cargo.toml
http/src/: client.rs  endpoints.rs  lib.rs
http/src/channel/messages/: allowed_mentions.rs  attachment.rs  message_create.rs  message_reference.rs
http/src/client/: messages.rs
http/src/endpoints/: channel.rs  guild.rs
http/src/responses/: error.rs  meta.rs
model/src/: channel.rs  guild.rs  id.rs  user.rs
neptunium/: Cargo.toml
neptunium-cache-inmemory/: Cargo.toml
neptunium-cache-inmemory/src/: gateway.rs  lib.rs  stats.rs  structs.rs  traits.rs
neptunium-gateway/: Cargo.toml
neptunium-gateway/src/: shard.rs
neptunium-http/: Cargo.toml
neptunium-http/src/: client.rs  endpoints.rs  error.rs  lib.rs  ratelimiting.rs  request.rs
neptunium-model/: Cargo.toml
neptunium-model/src/: guild.rs  (+7 more)
neptunium-voice/: Cargo.toml
neptunium/src/: client.rs  events.rs  lib.rs
neptunium/src/client/: error.rs
neptunium/src/events/: context.rs  extensions.rs
neptunium/src/exts/: channel.rs  guild.rs  message.rs
(+160 files in other folders)
