[package]
name = "fluxer-neptunium"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.89"
debug-ignore = "1.0.5"
fluxer-gateway = { path = "../fluxer-gateway" }
rand = "0.10.0"
tokio = { version = "1.49.0", features = ["full"] }
tracing = "0.1.44"
reqwest = "0.13.2"
zeroize = "1.8.2"
serde_json = "1.0.149"
serde_repr = "0.1.20"
serde = { version = "1.0.228", features = ["derive"] }

[lints.clippy]
pedantic = "warn"
