[package]
name = "neptunium-http"
version = "0.1.0"
edition = "2024"

[dependencies]
fluxer-model = { path = "../model" }
reqwest = "0.13.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
zeroize = "1.8.2"

[lints.clippy]
pedantic = "warn"
new-without-default = "allow"