[package]
name = "fluxer-neptunium"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.50.0", features = ["full"] }
neptunium-gateway = { path = "../gateway" }
neptunium-model = { path = "../model" }
neptunium-http = { path = "../http" }
tokio-tungstenite = "0.28.0"
serde_json = "1.0.149"
rand = "0.10.0"
tracing = "0.1.44"
async-trait = "0.1.89"
zeroize = "1.8.2"
reqwest = "0.13.2"
serde_path_to_error = "0.1.20"

[lints.clippy]
pedantic = "warn"

[features]
default = []
user_api = ["neptunium-http/user_api"]